# model_hierarchy_mpc

model_hierarchy_mpc/ocs2_cassie_mpc/: CMakeLists.txt  package.xml
model_hierarchy_mpc/ocs2_cassie_mpc/config/command/: gait.info  targetTrajectories.info
model_hierarchy_mpc/ocs2_cassie_mpc/config/mpc/: task.info
model_hierarchy_mpc/ocs2_cassie_mpc/include/ocs2_cassie_mpc/: LeggedRobotInterface.h  LeggedRobotPreComputation.h
model_hierarchy_mpc/ocs2_cassie_mpc/launch/: legged_robot.launch  visualize.launch
model_hierarchy_mpc/ocs2_cassie_mpc/rviz/: legged_robot.rviz
model_hierarchy_mpc/ocs2_cassie_mpc/src/: LeggedRobotDummyNode.cpp  LeggedRobotGaitCommandNode.cpp  LeggedRobotInterface.cpp  LeggedRobotMpcNode.cpp  LeggedRobotPreComputation.cpp
model_hierarchy_mpc/ocs2_cassie_mpc/src/command/: LeggedRobotModeSequenceKeyboard.cpp
model_hierarchy_mpc/ocs2_cassie_mpc/src/common/: ModelSettings.cpp
model_hierarchy_mpc/ocs2_cassie_mpc/src/constraint/: EndEffectorLinearConstraint.cpp  FrictionConeConstraint.cpp  NormalVelocityConstraintCppAd.cpp  ZeroForceConstraint.cpp  ZeroVelocityConstraintCppAd.cpp
model_hierarchy_mpc/ocs2_cassie_mpc/src/cost/: LeggedRobotStateInputQuadraticCost.cpp
model_hierarchy_mpc/ocs2_cassie_mpc/src/dynamics/: LeggedRobotDynamicsAD.cpp
model_hierarchy_mpc/ocs2_cassie_mpc/src/foot_planner/: CubicSpline.cpp  SplineCpg.cpp  SwingTrajectoryPlanner.cpp
model_hierarchy_mpc/ocs2_cassie_mpc/src/gait/: Gait.cpp  GaitReceiver.cpp  GaitSchedule.cpp  (+1 more)
model_hierarchy_mpc/ocs2_cassie_mpc/test/: AnymalFactoryFunctions.cpp
(+26 files in other folders)
