<?xml version="1.0"?>
<package format="2">
  <name>ocs2_cassie_mpc</name>
  <version>0.0.1</version>
  <description>The ocs2_cassie_mpc package</description>

  <maintainer email="nboyd31@gatech.edu">Nathan Boyd</maintainer>

  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslib</depend>
  <depend>cmake_modules</depend>
  <depend>tf</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
  <depend>robot_state_publisher</depend>

  <depend>ocs2_core</depend>
  <depend>ocs2_mpc</depend>
  <depend>ocs2_robotic_tools</depend>
  <depend>ocs2_ddp</depend>
  <depend>ocs2_pinocchio_interface</depend>
  <depend>ocs2_centroidal_model</depend>
  <depend>ocs2_ros_interfaces</depend>

  <depend>pinocchio</depend>
  <depend>anymal_c_simple_description</depend>
  <depend>cassie_description</depend>

</package>
